--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "yarn run test:lint && yarn run test:unit",
     "test:lint": "eslint *.js",
     "test:unit": "jest",
+    "test:e2e": "./test/index.e2e.js -a --foo=bar --boo abc def",
     "precommit": "yarn run test:lint"
   },
   "engines": {
