--- a/package.json
+++ b/package.json
@@ -35,16 +35,13 @@
     "microargs": "1.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "4.9.0",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "5.2.0",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
-    "husky": "^0.14.3",
+    "husky": "0.14.3",
     "jest": "21.2.1"
   },
   "jest": {
