--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "yarn run test:lint && yarn run test:unit && yarn run test:e2e",
     "test:lint": "eslint *.js",
     "test:unit": "jest",
-    "test:e2e": "./test/index.e2e.js -a --foo=bar abc def",
+    "test:e2e": "yarn run test:e2e:simple && yarn run test:e2e:commands",
+    "test:e2e:simple": "./test/simple.e2e.js -a --foo=bar abc def",
+    "test:e2e:commands": "./test/commands.e2e.js status --help",
     "precommit": "yarn run test:lint"
   },
   "engines": {
