--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.3.2",
   "description": "CLI scripts micro engine",
   "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "lint": "tslint -c tslint.json 'src/*.ts'",
     "test": "yarn run test:lint && yarn run test:unit && yarn run test:e2e",
-    "test:lint": "eslint *.js",
-    "test:unit": "jest ./test/index.spec.js",
-    "test:e2e": "jest ./test/index.e2e.spec.js"
+    "test:unit": "jest ./test/index.spec.ts",
+    "test:e2e": "jest ./test/index.e2e.spec.ts"
   },
   "lint-staged": {
     "src/*.{ts,tsx}": [
