--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "microargs": "1.1.2"
   },
   "devDependencies": {
+    "@types/dedent": "0.7.0",
     "@types/jest": "23.3.12",
+    "@types/lodash": "4.14.120",
+    "@types/node": "10.12.18",
     "dedent": "0.7.0",
     "husky": "1.3.1",
     "jest": "23.6.0",
