--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pawelgalazka/microcli.git"
+    "url": "git+https://github.com/pawelgalazka/cli.git"
   },
   "publishConfig": {
     "access": "public"
@@ -38,9 +38,9 @@
   "author": "Pawel Galazka",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pawelgalazka/microcli/issues"
+    "url": "https://github.com/pawelgalazka/cli/issues"
   },
-  "homepage": "https://github.com/pawelgalazka/microcli#readme",
+  "homepage": "https://github.com/pawelgalazka/cli#readme",
   "dependencies": {
     "lodash": "4.17.11",
     "microargs": "1.1.2"
