--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   },
   "homepage": "https://github.com/pawelgalazka/cli#readme",
   "dependencies": {
-    "lodash": "4.17.11",
-    "microargs": "1.1.2"
+    "@pawelgalazka/cli-args": "1.1.3",
+    "lodash": "4.17.11"
   },
   "devDependencies": {
     "@types/dedent": "0.7.0",
