--- a/package.json
+++ b/package.json
@@ -46,16 +46,17 @@
     "lodash": "4.17.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.3.1",
+    "@babel/preset-typescript": "7.1.0",
     "@types/dedent": "0.7.0",
-    "@types/jest": "23.3.12",
+    "@types/jest": "24.0.0",
     "@types/lodash": "4.14.120",
     "@types/node": "10.12.18",
     "dedent": "0.7.0",
     "husky": "1.3.1",
-    "jest": "23.6.0",
+    "jest": "24.1.0",
     "lint-staged": "8.1.0",
     "prettier": "1.15.3",
-    "ts-jest": "23.10.5",
     "tslint": "5.12.1",
     "tslint-config-prettier": "1.17.0",
     "tslint-plugin-prettier": "2.0.1",
