--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pawelgalazka/cli",
-  "version": "1.4.1",
+  "version": "2.0.0-beta.1",
   "description": "CLI scripts micro engine",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
