Update npm scripts

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "lint": "tslint -c tslint.json 'src/*.ts' 'test/*.ts'",
+    "lint": "tslint -c tslint.json 'src/*.ts' 'test/**/*.ts'",
     "test": "yarn run lint && yarn build && jest --coverage",
-    "test:unit": "jest ./tests/index.spec.ts",
-    "test:e2e": "jest ./tests/index.e2e.spec.ts"
+    "test:unit": "jest ./tests/unit/*.spec.ts",
+    "test:e2e": "jest ./tests/e2e/*.e2e.spec.ts"
   },
   "lint-staged": {
     "src/*.{ts,tsx}": [
