--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "homepage": "https://github.com/pawelgalazka/cli#readme",
   "dependencies": {
     "@pawelgalazka/cli-args": "1.1.3",
+    "@pawelgalazka/middleware": "1.0.0",
     "chalk": "2.4.2",
     "lodash": "4.17.11"
   },
