--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pawelgalazka/cli",
-  "version": "2.0.0-beta.2",
-  "description": "CLI scripts micro engine",
+  "version": "2.0.0",
+  "description": "Functions based CLI framework",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
