Fix name of npm script for sandbox

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:unit": "jest ./tests/unit/*.spec.ts",
     "test:e2e": "jest ./tests/e2e/*.e2e.spec.ts",
     "sandbox:simple": "./tests/sandbox/simple.js",
-    "sandbox:e2e": "./tests/sandbox/commands.js"
+    "sandbox:commands": "./tests/sandbox/commands.js"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
